cria model, controller aluno, enums

--- a/backend/Api.EscolaIdiomas/Api.EscolaIdiomas/appsettings.json
+++ b/backend/Api.EscolaIdiomas/Api.EscolaIdiomas/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnectionString": "postgresql://neondb_owner:npg_7tn8PNoAKbpJ@ep-jolly-glitter-ac7fp7j0-pooler.sa-east-1.aws.neon.tech/escola_idiomas?sslmode=require&channel_binding=require"
+    }
 }
