--- a/backend/Api.EscolaIdiomas/Api.EscolaIdiomas/Api.EscolaIdiomas.csproj
+++ b/backend/Api.EscolaIdiomas/Api.EscolaIdiomas/Api.EscolaIdiomas.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Api.EscolaIdiomas.Domain\Api.EscolaIdiomas.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
