Implementação de repositório e serviço de alunos
Atualiza o código para incluir a implementação de um repositório de alunos e um serviço de alunos, utilizando Dapper para acesso a dados. Adiciona referências a pacotes do NuGet, como `Microsoft.Extensions.Configuration`, `Dapper` e `Npgsql`, e modifica o arquivo `appsettings.json` para incluir a string de conexão ao banco de dados.

O layout do projeto foi alterado para incluir novos arquivos, como `appsettings.json` e `Program.cs`, e o controlador foi atualizado para registrar os serviços de repositório e serviço de alunos no contêiner de injeção de dependência. Vários arquivos binários foram adicionados, e os arquivos de dependências e ativos do projeto foram atualizados para refletir as novas configurações. O código foi reestruturado para melhorar a organização e a legibilidade, seguindo as melhores práticas de design de software.

--- a/backend/Api.EscolaIdiomas/Api.EscolaIdiomas/Api.EscolaIdiomas.csproj
+++ b/backend/Api.EscolaIdiomas/Api.EscolaIdiomas/Api.EscolaIdiomas.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Api.EscolaIdiomas.Domain\Api.EscolaIdiomas.Domain.csproj" />
+    <ProjectReference Include="..\Api.EscolaIdiomas.Infra.Data\Api.EscolaIdiomas.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
