--- a/backend/Api.EscolaIdiomas/Api.EscolaIdiomas.Infra.Data/Api.EscolaIdiomas.Infra.Data.csproj
+++ b/backend/Api.EscolaIdiomas/Api.EscolaIdiomas.Infra.Data/Api.EscolaIdiomas.Infra.Data.csproj
@@ -8,7 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.8" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Api.EscolaIdiomas.Domain\Api.EscolaIdiomas.Domain.csproj" />
   </ItemGroup>
 
 </Project>
