--- a/backend/Api.EscolaIdiomas/Api.EscolaIdiomas/appsettings.json
+++ b/backend/Api.EscolaIdiomas/Api.EscolaIdiomas/appsettings.json
@@ -7,6 +7,7 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnectionString": "postgresql://neondb_owner:npg_7tn8PNoAKbpJ@ep-jolly-glitter-ac7fp7j0-pooler.sa-east-1.aws.neon.tech/escola_idiomas?sslmode=require&channel_binding=require"
+        "DefaultConnection": "Host=ep-jolly-glitter-ac7fp7j0-pooler.sa-east-1.aws.neon.tech;Port=5432;Database=escola_idiomas;Username=neondb_owner;Password=npg_7tn8PNoAKbpJ;SslMode=Require;Trust Server Certificate=true;"
     }
+    
 }
